# justgetdomain_hot-memory-diff-engine

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  CurrentSession.md  README.md  Tickets.md  docker-compose.yml  plan.md  worker.js
.claude/: launch.json
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/data/: wordlist.json  words_selective.txt
backend/src/: batch_runner.rs  categories.rs  config.rs  dictionary.rs  handlers.rs  index.rs  lib.rs  main.rs  scanner.rs  scheduler.rs  snapshot.rs  state.rs
crates/hot-index/: Cargo.toml  README.md
crates/hot-index/benches/: lookup.rs
crates/hot-index/src/: lib.rs
crates/hot-index/src/persistence/: bincode.rs  mod.rs  rkyv.rs
crates/streaming-set-diff/: Cargo.toml  README.md
crates/streaming-set-diff/benches/: throughput.rs
crates/streaming-set-diff/src/: lib.rs
docs/: ALGO.md  ARCHITECTURE.md  Blog.md  DECISIONS.md  DomainsMonitor.md  IOBoundVSCpuBound.md  IO_bound_vs_cpu_bound.md  LIMITS.md  PERFORMANCE.md
docs/Engineering/: Double_buffer_problem.md  IO_bound_vs_cpu_bound.md
docs/Engineering/DSA/: dsa-invariants.md
docs/LinkedInEngineeringPosts/: README.md  http_is_stream_of_bytes_over_tcp.md  leetcode_matters_at_scale.md  leetcode_meta_lines.md  when_we_need_sse_vs_rest.md
docs/LinkedInEngineeringPosts/Leetcode/: dsa-invariants.md
docs/LinkedinPosts/: leetcode_matters_at_scale.md  vibe_coding.md
docs/ProductPositioning/: README.md  positioning_notes.md  registar_slow.md
examples/breach-password-check/: Cargo.toml  README.md
examples/breach-password-check/data/: sample-candidates.txt  sample-corpus.txt
examples/breach-password-check/src/: lib.rs  main.rs
examples/domain-availability/backend/: AGENTS.md  Cargo.toml  Dockerfile
examples/domain-availability/backend/data/: wordlist.json
examples/domain-availability/backend/src/: batch_runner.rs  categories.rs  config.rs  handlers.rs  index.rs  main.rs  scanner.rs  snapshot.rs  state.rs
examples/domain-availability/frontend/: .dockerignore  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/: next.config.ts  package.json  pnpm-lock.yaml  wrangler.jsonc
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/domains/: page.tsx
frontend/src/app/explore/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/: disclaimer-card.tsx  domain-search.tsx  home-hero.tsx  home-search.tsx  shortlist-slot.tsx  site-footer.tsx  site-nav.tsx  terminal-demo.tsx  theme-toggle.tsx  waitlist-form.tsx
frontend/src/hooks/: use-domain-search.ts  use-shelf-data.ts
(+69 files in other folders)
