[package]
name = "justgetdomain"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "batch"
path = "src/bin/batch.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rkyv = { version = "0.8", features = ["bytecheck"] }
axum = { version = "0.8.8", features = ["macros"] }
rustc-hash = "2.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["timeout", "cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
