[package]
name = "breach-password-check"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "breach-password-check"
path = "src/main.rs"

[dependencies]
streaming-set-diff = { path = "../../crates/streaming-set-diff" }
rustc-hash = "2.1"
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
anyhow = "1"
